--- a/web.css
+++ b/web.css
@@ -81,8 +81,8 @@ body {
   }
   .pyramid3d {
     position:relative;
-    width:150px;
-    height:150px;
+    width:100%;
+    height:100%;
     
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
