--- a/web.css
+++ b/web.css
@@ -81,8 +81,8 @@ body {
   }
   .pyramid3d {
     position:relative;
-    width:100%;
-    height:100%;
+    width: 12.5%;
+    height: 9.85vh;
     
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
