--- a/web.css
+++ b/web.css
@@ -68,7 +68,7 @@ body {
   .stage {
     -webkit-transform:scale(1.85);
     transform:scale(0.85);
-    float:right;
+    float:left;
     margin-right:120px;
     margin-top:30px;
     width:0px; height:0px;
