--- a/web.css
+++ b/web.css
@@ -22,7 +22,7 @@ body {
       margin: 0 auto;
   }
   h1 {
-      font-size: 3em;
+      font-size: 2.4em;
       font-weight: 100;
       text-transform: uppercase;
       margin: 0;
@@ -68,7 +68,7 @@ body {
   .stage {
     -webkit-transform:scale(1.85);
     transform:scale(0.85);
-    float:left;
+    float:right;
     margin-right:120px;
     margin-top:30px;
     width:0px; height:0px;
