--- a/main_style.css
+++ b/main_style.css
@@ -22,8 +22,9 @@ nav {
 }
 
 nav figure {
+	background-color: pink;
 	width: 12.5%;
-	height: 9.85%;
+	height: 9.85vh;
 	text-align: center;
 	float: left;
 	z-index: 1;
