--- a/main_style.css
+++ b/main_style.css
@@ -24,7 +24,8 @@ nav {
 nav figure {
 	background-color: pink;
 	width: 10%;
-	height: 9.8vh;
+	height: 9.85vh;
+	padding-bottom: 1px;
 	text-align: center;
 	float: left;
 	z-index: 1;
