--- a/main_style.css
+++ b/main_style.css
@@ -22,10 +22,10 @@ nav {
 }
 
 nav figure {
-	background-color: pink;
+	background-color: white;
 	width: 10%;
 	height: 9.85vh;
-	padding-bottom: 1px;
+	padding-bottom: 0.5vh;
 	text-align: center;
 	float: left;
 	z-index: 1;
