--- a/main_style.css
+++ b/main_style.css
@@ -110,7 +110,7 @@ nav h1 p {
 
 .DropDown-Menu ul li:hover{
 	background-color: lightgray;
-	color: white;
+	color: black;
 	text-decoration: underline;
 	transition-duration: 0.5s;
 }
