--- a/aboutUs.css
+++ b/aboutUs.css
@@ -7,6 +7,20 @@
 	box-sizing: border-box;
 }
 
+.Block1 {
+	padding-bottom: 50px;
+}
+
+.Block1 h1 {
+	color: white;
+	font-size: 50px;
+	font-weight: 600;
+	font-family: "Times New Roman";
+	padding: 20px;
+	text-align: center;
+	vertical-align: middle;
+	background-color: navy;
+}
 
 
 .Block2 {
