step bysetep looks

--- a/web.css
+++ b/web.css
@@ -142,7 +142,7 @@ body {
   }
 
   .bullets {
-      margin: 10%;
+      margin: 3%;
       float: center;
-      font-size: 3em;
+      font-size: 30px;
   }
