--- a/step-By-Step.css
+++ b/step-By-Step.css
@@ -16,3 +16,11 @@
 	text-align: center;
 	vertical-align: middle;
 }
+
+.Step-Step h3 {
+	color: white;
+	font-size: 25px;
+	font-weight: 600;
+	font-family: "Times New Roman";
+	padding: 5px;
+}
