--- a/step-By-Step.css
+++ b/step-By-Step.css
@@ -23,7 +23,7 @@
 
 .Step-Step h2 {
 	color: white;
-	font-weight: 600;
+	font-weight: 300;
 	font-family: "Times New Roman";
 	margin: 10px 25px;
 }
@@ -35,4 +35,10 @@
 
 .Step-Step ul {
 	margin: 0px 75px;
+}
+
+.Step-Step li {
+	margin: 0px 75px;
+	font-family: "Times New Roman";
+	font-size: 20px;
 }
