step page fixing

--- a/step-By-Step.css
+++ b/step-By-Step.css
@@ -13,7 +13,8 @@
 
 .Step-Step h1 {
 	color: white;
-	font-weight: 400;
+	font-size: 50px;
+	font-weight: 500;
 	font-family: "Times New Roman";
 	padding: 20px;
 	text-align: center;
