--- a/web.css
+++ b/web.css
@@ -146,3 +146,13 @@ body {
       float: center;
       font-size: 30px;
   }
+
+  .title {
+	color: white;
+	font-size: 41px;
+	font-weight: 600;
+	font-family: "Times New Roman";
+	padding: 20px;
+	text-align: center;
+	vertical-align: middle;
+}
